# marshal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  GLOSSARY.md  PRINCIPLES.md  ROADMAP.md
src/: cli.rs  context.rs  lib.rs  main.rs
src/commands/: clone.rs  config.rs  init.rs  log.rs  mod.rs  passthrough.rs  status.rs
src/config/: global.rs  local.rs  mod.rs  source.rs  system.rs
src/git/: mod.rs  parser.rs
src/modernize/: mod.rs  rule.rs  rules.rs
src/modernize/rules/: checkout.rs  mod.rs  remote.rs  reset.rs  stash.rs
src/workspace/: manifest.rs  mod.rs  scope.rs  state.rs
tests/: integration.rs
