[package]
name = "marshal"
version = "0.0.0-reserved"
edition = "2021"
rust-version = "1.75"
authors = ["Matias Denda <matutetandil@gmail.com>"]
description = "A Git workspace manager: monorepo ergonomics over multi-repo storage."
license = "MIT"
repository = "https://github.com/matutetandil/marshal"
homepage = "https://github.com/matutetandil/marshal"
readme = "README.md"
keywords = ["git", "workspace", "multi-repo", "vcs", "monorepo"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/lib.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[lib]
name = "marshal"
path = "src/lib.rs"
